--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
   <img src="images/Lab_2_Narrative_Map.png" class="w3-image" style="width:100%">
 </div>
 
+<div class="w3-container w3-padding-32" id="about">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 w3-text-white">About</h3>
+  <p><h3 class="w3-text-white">This webpage is a dedicated repository for some of my mapping
+    and carography efforts over the course of the 2023 and 2024 semesters during my time as a 
+    geology and geography undergraduate at the University of Kentucky and serves as a 
+    demonstration of my abilities to use adobe illustrator, photoshop, QGIS, and Visual Studio
+    Code to construct this gallery.</h3> 
+  </p>
+</div>
+
 <div class="w3-container w3-padding-32">
   <img src="images/DT_Layout_Illustrator.png" class="w3-image" style="width:100%">
 </div>
